Syncing with sharelatex src

--- a/abstract.tex
+++ b/abstract.tex
@@ -7,7 +7,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{abstract}
-People with hearing-impairment's inability to properly hear sounds affects their development in verbal communication, even though their vocal chords are properly functioning. Speech training is provided by institutions and specialized centres for the hearing-impaired. However, existing speech training systems are lacking in providing comprehensible visual feedback, wherein the trainee may measure how near or how far he is from the target pronunciation. This leaves the trainee having to guess on how to correct his mistakes. This research aims to explore and design an effective visual feedback method for speech training. The speech feedback system will explore on creating a measurable kind of feedback focusing on teaching a fixed set of consonant-diphthong combinations.
+People with hearing-impairment's inability to properly hear sounds affects their development in verbal communication, even though their vocal chords are properly functioning. Speech training is provided by institutions and specialized centres for the hearing-impaired. However, existing speech training systems are lacking in providing comprehensible visual feedback, wherein the trainee may measure how near or how far he is from the target pronunciation. This leaves the trainee having to guess on how to correct his mistakes. This research aims to explore and design an effective visual feedback method for speech training. The speech feedback system will explore on creating a measurable kind of feedback focusing on teaching a fixed set of phonemes.
 
 \begin{flushleft}
 \begin{tabular}{lp{4.25in}}
