--- a/appendix_A.tex
+++ b/appendix_A.tex
@@ -9,8 +9,6 @@
 \chapter{Diagrams and Other Documentation Tools}
 \label{sec:appendixa}
 
-
-This appendix may consist of proposed architectural design, algorithms, scientific formula for 
-MSCS and Data Flow Diagrams, Fishbone for MSIT.
+\includepdf[pages=-, scale=.8]{questionnaire.pdf}
 
 
