--- a/chapter_2.tex
+++ b/chapter_2.tex
@@ -90,15 +90,15 @@ Table \ref{tab:comparisontable2} provides a summary of speech training software 
 Name of Software & Features & Means of Visual Feedback \\ \hline
 	SpeechViewer
 		& Provides a dozen exercises for the user; clear and immediate feedback; provides animated rewards during successful responses 
-		& Visual and auditory feedback
+		& Visual and auditory feedback. Goal oriented feedback, if a goal is achieved, it indicates correct input.
 		\\ \hline
 	Speech Therapy 5
 		& 70 voice-activated games; real-time feedback; aids in pitch, loudness, voiced and unvoiced phonation; voicing onset; maximum phonation time; sound and vowel tracking
-		& Immediate animated feedback
+		& Immediate animated feedback on the child's performance depending on the goal of the game.
 		\\ \hline
 	Video Voice
 		& Wide variety of games; immediate feedback; aids in volume, pitch, and vowel production
-		& Immediate visual feedback
+		& Provides real-time feedback and immediately shows if the user is correct. A target is also employed which is hit by the user to indicate correct input. 
 		\\ \hline
 \end{tabular}
 \label{tab:comparisontable2}
