--- a/chapter_3.tex
+++ b/chapter_3.tex
@@ -198,4 +198,4 @@ Natalie Agustin's research uses Self-Organizing Maps and regression models in or
 
 Agustin's purpose for the research was to create a VAF system for speech learning of people with hearing impairment. Agustin developed a prototype which visually displays the articulations that need to be formed in order to speak the targeted sound.
 
-Agustin has provided the researchers of this paper with her method of training data with the use of EMA files from the MOCHA-TIMIT dataset. This will allow the researchers to change the dataset, that instead of vowels, consonant-diphthongs will be used. Also, the SOM algorithm by Agustin will be used by the researchers as well which will be needed in the feedback system in determining how far or how near the trainee is from the targeted pronunciation.
+Agustin has provided the researchers of this paper with her method of training data with the use of EMA files from the MOCHA-TIMIT dataset. This will allow the researchers to change the dataset, that instead of vowels, a fixed set of phonemes will be used. Also, the SOM algorithm by Agustin will be used by the researchers as well which will be needed in the feedback system in determining how far or how near the trainee is from the targeted pronunciation.
