--- a/preamble.tex
+++ b/preamble.tex
@@ -36,6 +36,7 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{pdflscape}
+\usepackage{pdfpages}
 
 \usepackage{graphicx}          %-- graphicx package needed for including figures in JPG or PNG format
  
