--- a/title_page.tex
+++ b/title_page.tex
@@ -11,7 +11,7 @@
 
 
 %-- **EDIT** the following line to indicate your thesis title
-\thestitle{Visual Feedback for Speech Training Aiding the Hearing-impaired in Learning Diphthongs with Consonants}
+\thestitle{Visual Feedback for Speech Training Aiding the Hearing-impaired in Learning Phonemes}
 
 \vspace{1.75cm}
 A Thesis Proposal\\
