--- a/main.tex
+++ b/main.tex
@@ -58,6 +58,9 @@
 \include{chapter_3}
 \include{chapter_4}
 
+\appendix
+\include{appendix_A}
+
 
 \bibliography{references}       %-- the file "myreferences.bib" is a sample bibliography (bib) from SIGGRAPH 
                                   %-- your job: **CREATE/EDIT** your own bibliography file  
